# json2xml

./: .coverage  .coveralls.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  1  AGENT.md  AGENTS.md  AUTHORS.rst  BENCHMARKS.md  BENCHMARK_RESULTS.md  CONTRIBUTING.rst  FINAL_SUMMARY.md  FREE_THREADED_OPTIMIZATION_ANALYSIS.md  HISTORY.rst  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  README.rst  RELEASE_NOTES.md  ROADMAP.md  benchmark.py  benchmark.sh  benchmark_all.py  benchmark_memory_rust.py  benchmark_multi_python.py  benchmark_results_3.14.txt  benchmark_results_3.14t.txt  benchmark_rust.py  benchmark_utils.py  dev-requirements.txt  dev.py  json2xml_rs.pyi  junit.xml  output.py  plan.md  pyproject.toml  pytest.ini  (+11 more)
.cursor/commands/: supermemory.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build-rust-wheels.yml  codeql.yml  lint.yml  publish-to-live-pypi.yml  publish-to-test-pypi.yml  pythonpackage.yml  rust-ci.yml
.issues/.sync/: config.json
.mypy_cache/3.7/: _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json
.mypy_cache/3.7/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.7/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json  machinery.data.json  machinery.meta.json  util.data.json  util.meta.json
.mypy_cache/3.7/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
docs/: Makefile  benchmarks.rst  conf.py  index.md  index.rst  installation.rst  json2xml.rst  make.bat  modules.rst  performance.rst  requirements.in  requirements.txt  rust_memory_benchmark.rst  usage.rst
docs/_build/doctrees/: authors.doctree  contributing.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  json2xml.doctree  modules.doctree  readme.doctree  usage.doctree
docs/_build/html/: .buildinfo  authors.html  contributing.html  genindex.html  history.html  index.html  installation.html  json2xml.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  usage.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/json2xml/: dicttoxml.html  json2xml.html  utils.html
docs/_build/html/_sources/: installation.rst.txt  usage.rst.txt
docs/flamegraphs/: README.md
examples/: bigexample.json  booleanjson.json  booleanjson2.json  egarray.json  example.py  example2.py  licht.json  wrongjson.json
htmlcov/: index.html  json2xml___init___py.html  json2xml_json2xml_py.html  json2xml_utils_py.html  status.json
json2xml/: .json2xml.py.swp  __init__.py  backend_selector.py  cli.py  dicttoxml.py  dicttoxml_fast.py  json2xml.py  parallel.py  types.py  utils.py
json2xml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lat.md/: architecture.md  behavior.md  lat.md  tests.md
rust/: Cargo.toml  README.md  pyproject.toml
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: fuzz_escape_xml.rs  fuzz_is_valid_xml_name.rs  fuzz_make_attr_string.rs  fuzz_make_valid_xml_name.rs  fuzz_wrap_cdata.rs
rust/src/: lib.rs
src/: cli.py  json2xml.py
tests/: __init__.py  conftest.py  test.py  test_additional_coverage.py  test_backend_selector.py  test_benchmark_multi_python.py  test_cli.py  test_dict2xml.py  test_dicttoxml_fast_fallback.py  test_dicttoxml_unit.py  test_json2xml.py  test_missing_coverage.py  test_parallel.py  test_rust_dicttoxml.py  test_utils.py  test_xml_escape.py
