[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json2xml"
version = "5.2.1"  # Replace with the dynamic version if needed
description = "Simple Python Library to convert JSON to XML"
readme = "README.rst"
requires-python = ">=3.13"
license = { text = "Apache Software License 2.0" }
keywords = ["json2xml"]
authors = [
    { name = "Vinit Kumar", email = "mail@vinitkumar.me" }
]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "defusedxml",
    "urllib3",
    "xmltodict>=0.12.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.8.0",
    "coverage>=7.10.3",
    "setuptools",
]

[project.urls]
Homepage = "https://github.com/vinitkumar/json2xml"

[tool.setuptools.packages.find]
include = ["json2xml"]

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.8.0",
    "coverage>=7.10.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
xvs = true
addopts = "--cov=json2xml --cov-report=xml:coverage/reports/coverage.xml --cov-report=term"
[tool.ruff]
exclude = [
    ".env",
    ".venv",
    "**/migrations/**",
]
lint.ignore = [
    "E501",  # line too long
    "F403",  # 'from module import *' used; unable to detect undefined names
    "E701",  # multiple statements on one line (colon)
    "F401",  # module imported but unused
]
line-length = 119
lint.select = [
    "I",
    "E",
    "F",
    "W",
]

[tool.ty]
# Type checking configuration with ty
