[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json2xml"
version = "6.0.1"
description = "Simple Python Library to convert JSON to XML"
readme = "README.rst"
requires-python = ">=3.10"
license = { text = "Apache Software License 2.0" }
keywords = ["json2xml"]
authors = [
    { name = "Vinit Kumar", email = "mail@vinitkumar.me" }
]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "defusedxml",
    "urllib3",
    "xmltodict>=0.12.0",
    "pytest",
    "pytest-cov",
    "coverage",
    "setuptools",
]

[project.urls]
Homepage = "https://github.com/vinitkumar/json2xml"

[project.scripts]
json2xml-py = "json2xml.cli:main"

[tool.setuptools.packages.find]
include = ["json2xml"]

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
]
fast = ["json2xml-rs>=0.1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
xvs = true
addopts = "--cov=json2xml --cov-report=xml:coverage/reports/coverage.xml --cov-report=term"
[tool.ruff]
exclude = [
    ".env",
    ".venv",
    "**/migrations/**",
]
lint.ignore = [
    "E501",  # line too long
    "F403",  # 'from module import *' used; unable to detect undefined names
    "E701",  # multiple statements on one line (colon)
    "F401",  # module imported but unused
]
line-length = 119
lint.select = [
    "I",
    "E",
    "F",
    "W",
]

[tool.ty]
# Type checking configuration with ty
