[package]
name = "json2xml_rs"
version = "0.3.0"
edition = "2024"
rust-version = "1.96"
description = "Fast native JSON to XML conversion for Python"
license = "Apache-2.0"

[lib]
name = "json2xml_rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["dep:pyo3"]
extension-module = ["python", "pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.28.2", optional = true }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
